<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".SongDataActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:weightSum="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <RelativeLayout
            android:id="@+id/edit_titleRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">
            <TextView android:id="@+id/edit_titleStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:textStyle="normal"
                android:text="@string/titleWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/edit_titleNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_titleStringTextView"
                android:layout_alignTop="@+id/edit_titleStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_filePathRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20">
            <TextView android:id="@+id/edit_filePathStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:textStyle="normal"
                android:text="@string/filePathWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/edit_filePathEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_filePathStringTextView"
                android:layout_alignTop="@+id/edit_filePathStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_audioMusicTrackLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <TextView android:id="@+id/edit_musicTrackStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:typeface="monospace"
                android:textStyle="normal"
                android:text="@string/musicTrackWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/edit_musicTrackEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_musicTrackStringTextView"
                android:layout_alignTop="@+id/edit_musicTrackStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_audioMusicChannelLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="left|center_vertical"
            android:layout_weight="10">
            <TextView android:id="@+id/edit_musicChannelStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:typeface="monospace"
                android:textStyle="normal"
                android:text="@string/musicChannelWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/edit_musicChannelEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_musicChannelStringTextView"
                android:layout_alignTop="@+id/edit_musicChannelStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_audioVocalTrackLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <TextView android:id="@+id/edit_vocalTrackStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:typeface="monospace"
                android:textStyle="normal"
                android:text="@string/vocalTrackWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/edit_vocalTrackEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_vocalTrackStringTextView"
                android:layout_alignTop="@+id/edit_vocalTrackStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edit_audioVocalChannelLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">
            <TextView android:id="@+id/edit_vocalChannelStringTextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@android:color/background_dark"
                android:typeface="monospace"
                android:textStyle="normal"
                android:text="@string/vocalChannelWithColonString"
                android:gravity="left|center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </TextView>
            <EditText android:id="@+id/vocalChannelEditText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/darkRed"
                android:textStyle="normal"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:gravity="left|center_vertical"
                android:layout_toRightOf="@+id/edit_vocalChannelStringTextView"
                android:layout_alignTop="@+id/edit_vocalChannelStringTextView">
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="20">
            <Button
                android:id="@+id/saveOneSongButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveString"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@android:drawable/btn_default"
                android:textColor="@color/blue"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">
            </Button>
            <Button
                android:id="@+id/exitEditSongButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exitString"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@android:drawable/btn_default"
                android:textColor="@android:color/holo_red_dark"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:layout_toRightOf="@+id/saveOneSongButton"
                android:layout_alignTop="@+id/saveOneSongButton">
            </Button>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>